<resources>
    <string name="no_internet_connection">No Internet conection</string>
    <string name="no_data_found">No data was found</string>
    <string name="server_not_found">Can not connect to server.Please try again.</string>

    <string name="app_name">Numbala</string>
    <string name="login">Đăng nhập</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forget_pw">Quên mật khẩu?</string>
    <string name="do_not_have_account_yet">Bạn chưa có tài khoản?&#160;</string>
    <string name="register_now">Đăng ký ngay</string>
    <string name="copy_right">Bản quyền thuộc về&#160;</string>
    <string name="numbala_com">Numbala.com</string>

    <string name="day">Ngày</string>
    <string name="month">Tháng</string>
    <string name="year">Năm</string>
    <string name="web">Web</string>
    <string name="total">Tất cả</string>
    <string name="success">Xong</string>
    <string name="waiting">Chờ</string>
    <string name="cancle">Huỷ</string>
    <string name="total_trans">Tổng giao dịch:</string>
    <string name="trans_success">Giao dịch thành công</string>
    <string name="trans_waiting">Giao dịch đang chờ</string>
    <string name="trans_cancel">Giao dịch huỷ</string>
    <string name="website">- Website:</string>
    <string name="id">- ID:</string>
    <string name="trans_date">- Ngày GD:</string>
    <string name="price">- Đơn giá:</string>
    <string name="custommer_info">Thông tin khách hàng</string>
    <string name="full_name">Họ &amp; tên:</string>
    <string name="phone">Điện thoại:</string>
    <string name="email">Email:</string>
    <string name="address">Địa chỉ:</string>
    <string name="note">Ghi chú:</string>
    <string name="link_detail_invoice">Link chi tiết đơn hàng:</string>
    <string name="fee">Phí:</string>
    <string name="drop_down">&#xf0dd;</string>
    <string name="personal_info">Thông tin cá nhân</string>
    <string name="create_date">Ngày tạo:</string>
    <string name="log_out">Thoát đăng nhập</string>
    <string name="site_description">Quý khác có thể đổi thông tin cá nhân tại website www.numbala.com</string>

    <string name="day_0">Ngày</string>
    <string name="day_1">Ngày 1</string>
    <string name="day_2">Ngày 2</string>
    <string name="day_3">Ngày 3</string>
    <string name="day_4">Ngày 4</string>
    <string name="day_5">Ngày 5</string>
    <string name="day_6">Ngày 6</string>
    <string name="day_7">Ngày 7</string>
    <string name="day_8">Ngày 8</string>
    <string name="day_9">Ngày 9</string>
    <string name="day_10">Ngày 10</string>
    <string name="day_11">Ngày 11</string>
    <string name="day_12">Ngày 12</string>
    <string name="day_13">Ngày 13</string>
    <string name="day_14">Ngày 14</string>
    <string name="day_15">Ngày 15</string>
    <string name="day_16">Ngày 16</string>
    <string name="day_17">Ngày 17</string>
    <string name="day_18">Ngày 18</string>
    <string name="day_19">Ngày 19</string>
    <string name="day_20">Ngày 20</string>
    <string name="day_21">Ngày 21</string>
    <string name="day_22">Ngày 22</string>
    <string name="day_23">Ngày 23</string>
    <string name="day_24">Ngày 24</string>
    <string name="day_25">Ngày 25</string>
    <string name="day_26">Ngày 26</string>
    <string name="day_27">Ngày 27</string>
    <string name="day_28">Ngày 28</string>
    <string name="day_29">Ngày 29</string>
    <string name="day_30">Ngày 30</string>
    <string name="day_31">Ngày 31</string>

    <string name="month_0">Tháng</string>
    <string name="month_1">Tháng 1</string>
    <string name="month_2">Tháng 2</string>
    <string name="month_3">Tháng 3</string>
    <string name="month_4">Tháng 4</string>
    <string name="month_5">Tháng 5</string>
    <string name="month_6">Tháng 6</string>
    <string name="month_7">Tháng 7</string>
    <string name="month_8">Tháng 8</string>
    <string name="month_9">Tháng 9</string>
    <string name="month_10">Tháng 10</string>
    <string name="month_11">Tháng 11</string>
    <string name="month_12">Tháng 12</string>

    <string name="year_0">Năm</string>
    <string name="year_2017">Năm 2017</string>
    <string name="year_2018">Năm 2018</string>
</resources>
