<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/day_1"
        android:title="@string/day_1" />

    <item
        android:id="@+id/day_2"
        android:title="@string/day_2" />

    <item
        android:id="@+id/day_3"
        android:title="@string/day_3" />

    <item
        android:id="@+id/day_4"
        android:title="@string/day_4" />

    <item
        android:id="@+id/day_5"
        android:title="@string/day_5" />

    <item
        android:id="@+id/day_6"
        android:title="@string/day_6" />

    <item
        android:id="@+id/day_7"
        android:title="@string/day_7" />

    <item
        android:id="@+id/day_8"
        android:title="@string/day_8" />

    <item
        android:id="@+id/day_9"
        android:title="@string/day_9" />

    <item
        android:id="@+id/day_10"
        android:title="@string/day_10" />

    <item
        android:id="@+id/day_11"
        android:title="@string/day_11" />

    <item
        android:id="@+id/day_12"
        android:title="@string/day_12" />

    <item
        android:id="@+id/day_13"
        android:title="@string/day_13" />

    <item
        android:id="@+id/day_14"
        android:title="@string/day_14" />

    <item
        android:id="@+id/day_15"
        android:title="@string/day_15" />

    <item
        android:id="@+id/day_16"
        android:title="@string/day_16" />

    <item
        android:id="@+id/day_17"
        android:title="@string/day_17" />

    <item
        android:id="@+id/day_18"
        android:title="@string/day_18" />

    <item
        android:id="@+id/day_19"
        android:title="@string/day_19" />

    <item
        android:id="@+id/day_20"
        android:title="@string/day_20" />

    <item
        android:id="@+id/day_21"
        android:title="@string/day_21" />

    <item
        android:id="@+id/day_22"
        android:title="@string/day_22" />

    <item
        android:id="@+id/day_23"
        android:title="@string/day_23" />

    <item
        android:id="@+id/day_24"
        android:title="@string/day_24" />

    <item
        android:id="@+id/day_25"
        android:title="@string/day_25" />

    <item
        android:id="@+id/day_26"
        android:title="@string/day_26" />

    <item
        android:id="@+id/day_27"
        android:title="@string/day_27" />

    <item
        android:id="@+id/day_28"
        android:title="@string/day_28" />

    <item
        android:id="@+id/day_29"
        android:title="@string/day_29" />

    <item
        android:id="@+id/day_30"
        android:title="@string/day_30" />
</menu>