<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="vn.numbala.activities.LoginActivity">

    <include
        android:id="@+id/appBar"
        layout="@layout/layout_action_bar_login" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/appBar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/rlEmail">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_above="@+id/hide1"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="50dp"
                android:layout_marginRight="50dp"
                android:src="@drawable/ic_logo" />

            <TextView
                android:id="@+id/hide1"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_centerInParent="true"
                android:layout_margin="5dp"
                android:background="@color/black"
                android:visibility="invisible" />

            <ImageView
                android:layout_width="@dimen/icon_user_login_size"
                android:layout_height="@dimen/icon_user_login_size"
                android:layout_below="@+id/hide1"
                android:layout_centerHorizontal="true"
                android:src="@drawable/ic_user_login" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rlEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/lineCenter"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <ImageView
                android:id="@+id/email"
                android:layout_width="@dimen/icon_email_pass_size"
                android:layout_height="@dimen/icon_email_pass_size"
                android:src="@drawable/ic_email" />

            <EditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/email"
                android:hint="@string/email_address"
                android:inputType="textEmailAddress" />

        </RelativeLayout>

        <FrameLayout
            android:id="@+id/lineCenter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/lineCenterPin"
            android:layout_marginBottom="20dp"
            android:visibility="invisible">

            <include layout="@layout/layout_line" />
        </FrameLayout>

        <RelativeLayout
            android:id="@+id/rlPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/rlEmail"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

            <ImageView
                android:id="@+id/pass"
                android:layout_width="@dimen/icon_email_pass_size"
                android:layout_height="@dimen/icon_email_pass_size"
                android:src="@drawable/ic_pass" />

            <EditText
                android:id="@+id/etPass"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_toRightOf="@+id/pass"
                android:hint="@string/password"
                android:inputType="textPassword" />

        </RelativeLayout>


        <TextView
            android:id="@+id/forgetPW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/rlPass"
            android:layout_marginRight="20dp"
            android:text="@string/forget_pw"
            android:textColor="@color/colorPrimary" />

        <Button
            android:id="@+id/btLogin"
            android:layout_width="@dimen/button_width"
            android:layout_height="wrap_content"
            android:layout_below="@+id/forgetPW"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:background="@drawable/drawable_boder_login_button"
            android:text="@string/login"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:textSize="@dimen/title_size" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/llRegister"
            android:layout_below="@+id/btLogin"
            android:layout_centerHorizontal="true"
            android:src="@drawable/ic_social_bg" />

        <LinearLayout
            android:id="@+id/llRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/copy_right"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/do_not_have_account_yet" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_now"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/copy_right"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/copy_right" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/numbala_com"
                android:textColor="@color/colorPrimary" />

        </LinearLayout>

        <!--Pin-->
        <FrameLayout
            android:id="@+id/lineCenterPin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:visibility="invisible">

            <include layout="@layout/layout_line" />
        </FrameLayout>
    </RelativeLayout>


</RelativeLayout>
