<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:apps="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="15dp"
        android:background="@drawable/bg_detail_header_profile">

        <ImageView
            android:id="@+id/image"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="20dp"
            apps:src="@drawable/ic_success_2" />

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/image"
            android:layout_centerHorizontal="true"
            android:textAllCaps="true"
            android:textColor="@color/white"
            android:text="@string/personal_info" />


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/title"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_detail_footer"
            android:scrollbars="none">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">


                <TextView
                    android:id="@+id/full_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/custommer_info"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="20dp"
                    android:text="@string/full_name" />

                <TextView
                    android:id="@+id/tvFullName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/custommer_info"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="20dp"
                    android:layout_toRightOf="@+id/full_name"
                    android:text="Donal Trump"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/full_name"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/phone" />

                <TextView
                    android:id="@+id/tvPhone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/full_name"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/phone"
                    android:text="097 124 245"
                    android:textColor="@color/detail_header" />

                <TextView
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phone"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/email" />

                <TextView
                    android:id="@+id/tvEmail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/phone"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/email"
                    android:text="abc@gmail.com"
                    android:textColor="@color/colorPrimary" />

                <TextView
                    android:id="@+id/createDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/create_date" />

                <TextView
                    android:id="@+id/tvCreateDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/email"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:layout_toRightOf="@+id/createDate"
                    android:text="02-12-2017 12-22-00" />

                <TextView
                    android:id="@+id/tvNote"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/createDate"
                    android:layout_margin="30dp"
                    android:gravity="center"
                    android:textColor="@color/brown_red"
                    android:text="@string/site_description"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/linkTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvNote"
                    android:layout_marginLeft="20dp"
                    android:layout_marginTop="10dp"
                    android:text="@string/link_detail_invoice"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tvLink"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/linkTitle"
                    android:layout_marginLeft="20dp"
                    android:text="www.abcxyz.com/12345ACBD"
                    android:textColor="@color/colorPrimary"
                    android:visibility="gone" />

            </RelativeLayout>

        </ScrollView>

        <TextView
            android:id="@+id/textview"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_below="@+id/title"
            android:layout_marginTop="10dp"
            android:background="@color/colorPrimary" />

    </RelativeLayout>

    <ImageView
        android:id="@+id/close"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:src="@drawable/ic_close" />


</RelativeLayout>